tkytekstil son güncelleme

--- a/tkytekstil.editor/Views/Shared/_topbar.cshtml
+++ b/tkytekstil.editor/Views/Shared/_topbar.cshtml
@@ -1,5 +1,5 @@
 ﻿@using tkytekstil.ENGINE.Dtos.UserData
-@using tkytekstil.Core
+@using tkytekstil.editor.Core
 @{
     UserDto user = SessionExtensionMethod.GetObject<UserDto>(Context.Session, "account") as UserDto;
 }
