--- a/tkytekstil.editor/Views/urun/urunler.cshtml
+++ b/tkytekstil.editor/Views/urun/urunler.cshtml
@@ -25,6 +25,7 @@
                                 <th>#</th>
                                 <th>Ürün Adı</th>
                                 <th>Adet</th>
+                                <th>Fiyat</th>
                                 <th>Ürünü Tuttur?</th>
                                 <th>Vitrin</th>
                                 <th>Oluşturulma</th>
@@ -40,6 +41,7 @@
                                 <th><img style="height:50px;" src="https://uploads.tkytekstil.com/img/@item.ProductBaseImage" /></th>
                                 <td>@item.ProductName</td>
                                 <td>@item.Quantity</td>
+                                <td>@item.Price TL</td>
                                 @if (item.SortedRow == false)
                                 {
                                     <td>Sabit Değil</td>
