--- a/tkytekstil/Views/Shared/_Layout.cshtml
+++ b/tkytekstil/Views/Shared/_Layout.cshtml
@@ -308,7 +308,7 @@
         <div class="footer-top section-padding">
             <div class="container">
                 <div class="row mb-n10">
-                    <div class="col-12 col-sm-6 col-lg-4 col-xl-4 mb-10" data-aos="fade-up" data-aos-delay="300">
+                    <div class="col-12 col-sm-3 col-lg-3 col-xl-3 mb-10" data-aos="fade-up" data-aos-delay="200">
                         <div class="single-footer-widget">
                             <h2 class="widget-title">Hızlı Menü</h2>
                             <ul class="widget-list">
@@ -318,7 +318,7 @@
                             </ul>
                         </div>
                     </div>
-                    <div class="col-12 col-sm-6 col-lg-4 col-xl-4 mb-10" data-aos="fade-up" data-aos-delay="400">
+                    <div class="col-12 col-sm-3 col-lg-3 col-xl-3 mb-10" data-aos="fade-up" data-aos-delay="300">
                         <div class="single-footer-widget aos-init aos-animate">
                             <h2 class="widget-title">Hesabım</h2>
                             <ul class="widget-list">
@@ -337,15 +337,28 @@
                             </ul>
                         </div>
                     </div>
-                    <div class="col-12 col-sm-6 col-lg-4 col-xl-4 mb-10" data-aos="fade-up" data-aos-delay="200">
+                    <div class="col-12 col-sm-3 col-lg-3 col-xl-3 mb-10" data-aos="fade-up" data-aos-delay="400">
+                        <div class="single-footer-widget aos-init aos-animate">
+                            <h2 class="widget-title">Sözleşme</h2>
+                            <ul class="widget-list">
+                                <li><a href="/gizlilik">Gizlilik Politikası</a></li>
+                                <li><a href="/mesafelisatis">Satış Sözleşmesi</a></li>
+                                <li><a href="/teslimatveiade">İade Politikası</a></li>
+                            </ul>
+                        </div>
+                    </div>
+
+                    <div class="col-12 col-sm-3 col-lg-3 col-xl-3 mb-10" data-aos="fade-up" data-aos-delay="500">
                         <div class="single-footer-widget">
                             <h2 class="widget-title">Bize Ulaş</h2>
                             <!-- Contact Address Start -->
                             <ul class="widget-address">
                                 <li><i class="fa fa-whatsapp"></i> <a href="#">+90 538 282 11 15</a></li>
                                 <li><i class="fa fa-envelope"></i> <a href="#">siparis@tkytekstil.com</a></li>
-                            </ul>
+                                <li style="margin-top: 15px;"><img style="width:50px;" src="/assets/images/logo/mastercard.png"><img style="width: 80px;margin-left: 15px;" src="/assets/images/logo/visa.png"></li>
+                                <li style="margin-top: 10px;"><img style="width: 180px;" src="/assets/images/logo/iyzico.svg"></li>
 
+                            </ul>
                         </div>
                     </div>
                 </div>
