--- a/tkytekstil/Views/anasayfa/urunlerimiz.cshtml
+++ b/tkytekstil/Views/anasayfa/urunlerimiz.cshtml
@@ -180,6 +180,9 @@
                                             }
                                         </div>
                                     </div>
+                                    <span class="price">
+                                        <span class="new">@item.Price ₺</span>
+                                    </span>
                                     <div class="shop-list-btn">
                                         <a title="Wishlist" href="#" class="btn btn-sm btn-outline-dark btn-hover-primary wishlist"><i class="fa fa-heart"></i></a>
                                     </div>
