--- a/tkytekstil/Views/bayi/hesabim.cshtml
+++ b/tkytekstil/Views/bayi/hesabim.cshtml
@@ -89,8 +89,22 @@
 
                         <div class="col-md-6">
                             <div class="checkout-form-list">
-                                <label>Adınız Soyadınız <span class="required">*</span></label>
+                                <label>Adınız <span class="required">*</span></label>
                                 <input placeholder="" class="disabled" type="text" name="@Model.ShopperName" value="@Model.ShopperName">
+                            </div>
+                        </div>
+
+                        <div class="col-md-6">
+                            <div class="checkout-form-list">
+                                <label>Soyadınız <span class="required">*</span></label>
+                                <input placeholder="" class="disabled" type="text" name="@Model.ShopperSurname" value="@Model.ShopperSurname">
+                            </div>
+                        </div>
+
+                        <div class="col-md-6">
+                            <div class="checkout-form-list">
+                                <label>TC Kimlik No <span class="required">*</span></label>
+                                <input placeholder="" class="disabled" type="text" name="@Model.ShopperIdentityNumber" value="@Model.ShopperIdentityNumber">
                             </div>
                         </div>
 
