--- a/tkytekstil/Views/bayi/urunlerim.cshtml
+++ b/tkytekstil/Views/bayi/urunlerim.cshtml
@@ -59,6 +59,7 @@
                                         <td class="pro-thumbnail"><a href="#"><img style="width:75px; height:75px; object-fit:cover;" src="https://uploads.tkytekstil.com/img/@item.product.ProductBaseImage" /></a></td>
                                         <td class="pro-thumbnail"><a href="#">@item.product.ProductName</a></td>
                                         <td class="pro-thumbnail"><a href="#">@item.QuantityItem</a></td>
+                                        <td class="pro-thumbnail"><a href="#">@item.product.Price</a></td>
                                         <td class="pro-thumbnail"><a href="#">@item.Color</a></td>
                                         <td class="pro-thumbnail"><a href="#">@item.Size</a></td>
                                     </tr>
@@ -70,13 +71,11 @@
                             }
                         </tbody>
                         <!-- Table Body End -->
-
                     </table>
                 </div>
 
             </div>
         </div>
-
     </div>
 </div>
 
