--- a/tkytekstil.editor/Views/urun/urunekle.cshtml
+++ b/tkytekstil.editor/Views/urun/urunekle.cshtml
@@ -29,9 +29,7 @@
                         <div class="mb-3">
                             <label for="validationCustom01" class="form-label">Ürün Adı</label>
                             @Html.TextBoxFor(x => x.ProductName, new { @class = "form-control", id = "validationCustom01", placeholder = "Ürün adınızı giriniz", @required = "" })
-                            <div class="valid-feedback">
-                                Kategori adı geçerli!
-                            </div>
+                           
                         </div>
                     </div>    
                 </div> 
@@ -40,9 +38,7 @@
                         <div class="mb-3">
                             <label for="validationCustom02" class="form-label">Spot</label>
                             @Html.TextBoxFor(x => x.ProductSpot, new { @class = "form-control", id = "validationCustom02", placeholder = "Spot giriniz", @required = "" })
-                            <div class="valid-feedback">
-                                Kategori açıklaması geçerli!
-                            </div>
+                          
                         </div>
                     </div>
                 </div>
@@ -61,13 +57,18 @@
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-md-12">
+                     <div class="col-md-6">
+                        <div class="mb-3">
+                            <label for="validationCustom02" class="form-label">Fiyat</label>
+                            @Html.TextBoxFor(x => x.Price, new { @class = "form-control", id = "validationCustom02", placeholder = "Fiyat giriniz", @required = "" })
+                          
+                        </div>
+                    </div>
+                    <div class="col-md-6">
                         <div class="mb-3">
                             <label for="validationCustom02" class="form-label">Adet</label>
                             @Html.TextBoxFor(x => x.Quantity, new { @class = "form-control", id = "validationCustom02", placeholder = "Adet giriniz", @required = "" })
-                            <div class="valid-feedback">
-                                Kategori açıklaması geçerli!
-                            </div>
+                          
                         </div>
                     </div>
                 </div>
@@ -77,9 +78,7 @@
                         <div class="mb-3">
                             <label for="validationCustom01" class="form-label">Kategori</label>
                             @Html.DropDownListFor(x => x.CategoryId, (SelectList)ViewBag.Category, "Kategori Seçiniz", new { @class = "form-select", id = "validationCustom03", @required = "" })
-                            <div class="valid-feedback">
-                                Kategori adı geçerli!
-                            </div>
+                           
                         </div>
                     </div>
                 </div>
@@ -88,9 +87,7 @@
                         <div class="mb-3">
                             <label for="validationCustom01" class="form-label">Marka</label>
                             @Html.DropDownListFor(x => x.BrandId, (SelectList)ViewBag.Brands, "Marka Seçiniz", new { @class = "form-select", id = "validationCustom03", @required = "" })
-                            <div class="valid-feedback">
-                                Kategori adı geçerli!
-                            </div>
+                          
                         </div>
                     </div>
                 </div>
