--- a/tkytekstil/Views/anasayfa/urunler.cshtml
+++ b/tkytekstil/Views/anasayfa/urunler.cshtml
@@ -106,9 +106,9 @@
                                                         }
                                                     </div>
                                                 </div>
-                                                @*<span class="price">
-                                                        <span class="new">@item.ProductPrice ₺</span>
-                                                    </span>*@
+                                                <span class="price">
+                                                        <span class="new">@item.Price ₺</span>
+                                                    </span>
                                                 @*<div class="quantity mb-5">
                                                         <div class="cart-plus-minus">
                                                             <input class="cart-plus-minus-box" value="0" type="text">
