--- a/tkytekstil/Views/bayi/girisyap.cshtml
+++ b/tkytekstil/Views/bayi/girisyap.cshtml
@@ -52,20 +52,8 @@
                         <div class="single-input-item mb-1">
                             <input asp-for="ShopperPassword" type="password" placeholder="Şifrenizi giriniz">
                         </div>
-
-                        <div class="single-input-item mb-3">
-                            <div class="login-reg-form-meta d-flex align-items-center justify-content-between">
-                                <div class="remember-meta mb-3">
-                                    <div class="custom-control custom-checkbox">
-                                        <input type="checkbox" class="custom-control-input" id="rememberMe" asp-for="RememberMe">
-                                        <label class="custom-control-label" for="rememberMe">Beni Hatırla</label>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-
                         <div class="single-input-item mb-1">
-                            <button class="btn btn btn-dark btn-hover-primary rounded-0">Giriş Yap</button>
+                            <button style="width: 100%;" class="btn btn btn-dark btn-hover-primary rounded-0">Giriş Yap</button>
                         </div>
 
                     </form>
