--- a/tkytekstil/Views/bayi/siparislerim.cshtml
+++ b/tkytekstil/Views/bayi/siparislerim.cshtml
@@ -56,6 +56,7 @@
                                     <tr>
                                         <td class="pro-thumbnail"><a href="#">@item.OrderNo</a></td>
                                         <td class="pro-title">@item.CreatedTime.ToString("dd MMMM, yyyy | HH:mm")</td>
+                                        <td class="new">@item.TotalPrice TL</td>
                                         @if (item.IsDone == false)
                                         {
                                             <td class="pro-price"><span>Beklemede</span></td>
