--- a/tkytekstil/Views/urun/siparis.cshtml
+++ b/tkytekstil/Views/urun/siparis.cshtml
@@ -90,11 +90,22 @@
 
                             <div class="col-md-6">
                                 <div class="checkout-form-list">
-                                    <label>Adınız Soyadınız <span class="required">*</span></label>
+                                    <label>Adınız <span class="required">*</span></label>
                                     <input placeholder="" class="disabled" type="text" name="@shopper.ShopperName" value="@shopper.ShopperName">
                                 </div>
                             </div>
-
+                            <div class="col-md-6">
+                                <div class="checkout-form-list">
+                                    <label>Soyadınız <span class="required">*</span></label>
+                                    <input placeholder="" class="disabled" type="text" name="@shopper.ShopperSurname" value="@shopper.ShopperSurname">
+                                </div>
+                            </div>
+                              <div class="col-md-6">
+                                <div class="checkout-form-list">
+                                    <label>TC Kimlik No <span class="required">*</span></label>
+                                    <input placeholder="" class="disabled" type="text" name="@shopper.ShopperIdentityNumber" value="@shopper.ShopperIdentityNumber">
+                                </div>
+                            </div>
                             <div class="col-md-6">
                                 <div class="checkout-form-list">
                                     <label>Email Address<span class="required">*</span></label>
@@ -139,7 +150,8 @@
                             <thead>
                                 <tr class="cart-product-head">
                                     <th class="cart-product-name text-start">Ürün</th>
-                                    <th class="cart-product-total text-end">Adet</th>
+                                    <th class="cart-product-name text-start" style="min-width: 10px;">Fiyat</th>
+                                    <th class="cart-product-total text-end" style="min-width: 50px;">Adet</th>
                                 </tr>
                             </thead>
 
@@ -149,7 +161,8 @@
                                 {
                                     <tr class="cart_item">
                                         <td class="cart-product-name text-start ps-0"> @item.products.ProductName | @item.Color | @item.Size</td>
-                                        <td class="cart-product-total text-end pe-0"><strong class="product-quantity"> x @item.Quantity</strong></td>
+                                        <td class="cart-product-name text-start ps-0" style="min-width: 80px;"> @Convert.ToInt32(item.Price*item.Quantity) TL</td>
+                                        <td class="cart-product-total text-end pe-0" style="min-width: 100px;"><strong class="product-quantity"> x @item.Quantity</strong></td>
                                     </tr>
 
                                 }
